<?xml version="1.0"?>

<package format="3">
    <name>tarm_hwi</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akshayb@gmx.com">akshay bansod</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>tarm</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>